refactor: add @NotNull annotation to getHandlers() method for better null safety